--- a/index.html
+++ b/index.html
@@ -1,135 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/styles.css" />
-    <script src="./js/scripts.js"></script>
-    <title>Ransom joke note</title>
-  </head>
-  <body>
-    <div class="container">
-      <div class="word">
-        <span class="whyWLetter">w</span>
-        <span class="whyHLetter">h</span>
-        <span class="whyYLetter">y</span>
-      </div>
-      <div class="word">
-        <span class="didDLetter">d</span>
-        <span class="didILetter">i</span>
-        <span class="didDTwoLetter">d</span>
-      </div>
-      <div class="word">
-        <span class="theTLetter">t</span>
-        <span class="theHLetter">h</span>
-        <span class="theELetter">e</span>
-      </div>
-      <div class="word">
-        <span class="frontendFLetter">f</span>
-        <span class="frontendRLetter">r</span>
-        <span class="frontendOLetter">o</span>
-        <span class="frontendNLetter">n</span>
-        <span class="frontendTLetter">t</span>
-        <span class="hyphen">-</span>
-        <span class="frontendELetter">e</span>
-        <span class="frontendNTwoLetter">n</span>
-        <span class="frontendDLetter">d</span>
-      </div>
-      <div class="word">
-        <span class="developerDLetter">d</span>
-        <span class="developerELetter">e</span>
-        <span class="developerVLetter">v</span>
-        <span class="developerETwoLetter">e</span>
-        <span class="developerLLetter">l</span>
-        <span class="developerOLetter">o</span>
-        <span class="developerPLetter">p</span>
-        <span class="developerEThreeLetter">e</span>
-        <span class="developerRLetter">r</span>
-      </div>
-      <div class="word">
-        <span class="takeTLetter">t</span>
-        <span class="takeALetter">a</span>
-        <span class="takeKLetter">k</span>
-        <span class="takeELetter">e</span>
-      </div>
-      <div class="word">
-        <span class="upULetter">u</span>
-        <span class="upPLetter">p</span>
-      </div>
-      <div class="word">
-        <span class="gardeningGLetter">g</span>
-        <span class="gardeningALetter">a</span>
-        <span class="gardeningRLetter">r</span>
-        <span class="gardeningDLetter">d</span>
-        <span class="gardeningELetter">e</span>
-        <span class="gardeningNLetter">n</span>
-        <span class="gardeningILetter">i</span>
-        <span class="gardeningNTwoLetter">n</span>
-        <span class="gardeningGTwoLetter">g</span>
-      </div>
-      <div class="word">
-        <span class="question-mark">?</span>
-      </div>
-      <div class="word">
-        <span class="becauseBLetter">b</span>
-        <span class="becauseELetter">e</span>
-        <span class="becauseCLetter">c</span>
-        <span class="becauseALetter">a</span>
-        <span class="becauseULetter">u</span>
-        <span class="becauseSLetter">s</span>
-        <span class="becauseETwoLetter">e</span>
-      </div>
-      <div class="word">
-        <span class="theyTLetter">t</span>
-        <span class="theyHLetter">h</span>
-        <span class="theyELetter">e</span>
-        <span class="theyYLetter">y</span>
-      </div>
-      <div class="word">
-        <span class="wantedWLetter">w</span>
-        <span class="wantedALetter">a</span>
-        <span class="wantedNLetter">n</span>
-        <span class="wantedTLetter">t</span>
-        <span class="wantedELetter">e</span>
-        <span class="wantedDLetter">d</span>
-      </div>
-      <div class="word">
-        <span class="toTLetter">t</span>
-        <span class="toOLetter">o</span>
-      </div>
-      <div class="word">
-        <span class="improveILetter">i</span>
-        <span class="improveMLetter">m</span>
-        <span class="improvePLetter">p</span>
-        <span class="improveRLetter">r</span>
-        <span class="improveOLetter">o</span>
-        <span class="improveVLetter">v</span>
-        <span class="improveELetter">e</span>
-      </div>
-      <div class="word">
-        <span class="theirTLetter">t</span>
-        <span class="theirHLetter">h</span>
-        <span class="theirELetter">e</span>
-        <span class="theirILetter">i</span>
-        <span class="theirRLetter">r</span>
-      </div>
-      <div class="word">
-        <span class="rootRLetter">r</span>
-        <span class="rootOLetter">o</span>
-        <span class="rootOTwoLetter">o</span>
-        <span class="rootTLetter">t</span>
-      </div>
-      <div class="word">
-        <span class="skillsSLetter">s</span>
-        <span class="skillsKLetter">k</span>
-        <span class="skillsILetter">i</span>
-        <span class="skillsLLetter">l</span>
-        <span class="skillsLTwoLetter">l</span>
-        <span class="skillsSTwoLetter">s</span>
-      </div>
-      <div class="word">
-        <span class="exclamation-mark">!</span>
-      </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./css/styles.css" />
+  <script src="./js/scripts.js"></script>
+  <title>Ransom joke note</title>
+</head>
+
+<body>
+  <div class="container">
+    <div class="word">
+      <span class="whyWLetter">w</span>
+      <span class="whyHLetter">h</span>
+      <span class="whyYLetter">y</span>
     </div>
-  </body>
+    <div class="word">
+      <span class="didDLetter">d</span>
+      <span class="didILetter line-t">i</span>
+      <span class="didDTwoLetter line-m cap">d</span>
+    </div>
+    <div class="word">
+      <span class="theTLetter">t</span>
+      <span class="theHLetter line-t cap">h</span>
+      <span class="theELetter line-b cap">e</span>
+    </div>
+    <div class="word">
+      <span class="frontendFLetter line-b cap">f</span>
+      <span class="frontendRLetter cap">r</span>
+      <span class="frontendOLetter line-m cap">o</span>
+      <span class="frontendNLetter line-t">n</span>
+      <span class="frontendTLetter cap line-b">t</span>
+      <span class="hyphen line-t">-</span>
+      <span class="frontendELetter line-b">e</span>
+      <span class="frontendNTwoLetter line-t cap">n</span>
+      <span class="frontendDLetter cap line-t">d</span>
+    </div>
+    <div class="word">
+      <span class="developerDLetter cap line-t">d</span>
+      <span class="developerELetter cap line-t">e</span>
+      <span class="developerVLetter cap">v</span>
+      <span class="developerETwoLetter line-m">e</span>
+      <span class="developerLLetter">l</span>
+      <span class="developerOLetter">o</span>
+      <span class="developerPLetter line-m">p</span>
+      <span class="developerEThreeLetter line-t">e</span>
+      <span class="developerRLetter line-t">r</span>
+    </div>
+    <div class="word">
+      <span class="takeTLetter line-b">t</span>
+      <span class="takeALetter cap line-b">a</span>
+      <span class="takeKLetter line-m cap">k</span>
+      <span class="takeELetter line-m">e</span>
+    </div>
+    <div class="word">
+      <span class="upULetter cap line-t">u</span>
+      <span class="upPLetter">p</span>
+    </div>
+    <div class="word">
+      <span class="gardeningGLetter line-m">g</span>
+      <span class="gardeningALetter cap line-m">a</span>
+      <span class="gardeningRLetter">r</span>
+      <span class="gardeningDLetter cap">d</span>
+      <span class="gardeningELetter line-m">e</span>
+      <span class="gardeningNLetter cap line-t">n</span>
+      <span class="gardeningILetter line-b cap">i</span>
+      <span class="gardeningNTwoLetter line-b">n</span>
+      <span class="gardeningGTwoLetter line-m">g</span>
+    </div>
+    <div class="word">
+      <span class="question-mark">?</span>
+    </div>
+    <div class="word">
+      <span class="becauseBLetter line-t">b</span>
+      <span class="becauseELetter line-b">e</span>
+      <span class="becauseCLetter line-m cap">c</span>
+      <span class="becauseALetter">a</span>
+      <span class="becauseULetter cap line-m">u</span>
+      <span class="becauseSLetter">s</span>
+      <span class="becauseETwoLetter">e</span>
+    </div>
+    <div class="word">
+      <span class="theyTLetter line-t">t</span>
+      <span class="theyHLetter cap line-t">h</span>
+      <span class="theyELetter line-b">e</span>
+      <span class="theyYLetter line-b">y</span>
+    </div>
+    <div class="word">
+      <span class="wantedWLetter cap line-m">w</span>
+      <span class="wantedALetter line-m">a</span>
+      <span class="wantedNLetter cap">n</span>
+      <span class="wantedTLetter line-b">t</span>
+      <span class="wantedELetter cap">e</span>
+      <span class="wantedDLetter cap line-t">d</span>
+    </div>
+    <div class="word">
+      <span class="toTLetter cap line-m">t</span>
+      <span class="toOLetter cap line-t">o</span>
+    </div>
+    <div class="word">
+      <span class="improveILetter cap line-t">i</span>
+      <span class="improveMLetter cap">m</span>
+      <span class="improvePLetter line-m">p</span>
+      <span class="improveRLetter">r</span>
+      <span class="improveOLetter">o</span>
+      <span class="improveVLetter">v</span>
+      <span class="improveELetter cap line-m">e</span>
+    </div>
+    <div class="word">
+      <span class="theirTLetter cap line-m">t</span>
+      <span class="theirHLetter">h</span>
+      <span class="theirELetter">e</span>
+      <span class="theirILetter cap">i</span>
+      <span class="theirRLetter line-b">r</span>
+    </div>
+    <div class="word">
+      <span class="rootRLetter cap line-b">r</span>
+      <span class="rootOLetter line-t">o</span>
+      <span class="rootOTwoLetter">o</span>
+      <span class="rootTLetter cap line-t">t</span>
+    </div>
+    <div class="word">
+      <span class="skillsSLetter line-t cap">s</span>
+      <span class="skillsKLetter line-m">k</span>
+      <span class="skillsILetter line-m">i</span>
+      <span class="skillsLLetter line-t">l</span>
+      <span class="skillsLTwoLetter cap line-t">l</span>
+      <span class="skillsSTwoLetter cap line-t">s</span>
+    </div>
+    <div class="word">
+      <span class="exclamation-mark">!</span>
+    </div>
+  </div>
+</body>
+
 </html>
